Add thank you toast for successful submissions
Added a thank you toast notification for form submissions.

--- a/index.html
+++ b/index.html
@@ -663,5 +663,16 @@
         </form>
       </div>
     </div>
+
+    <!-- Thank You Toast -->
+    <div id="thank-you-toast" class="toast">
+        <div class="toast-content">
+            <i class="fas fa-check-circle"></i>
+            <div class="toast-message">
+                <h4>Thank You!</h4>
+                <p>Your issue has been submitted successfully.</p>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
