--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
           </div>
           <p class="subtitle">Tech & Innovative Society</p>
           <!-- Theme Toggle Button -->
-          <button class="theme-toggle-btn" id="theme-toggle-btn">
-            <i class="fas fa-palette"></i> <span>Theme</span>
-          </button>
+          <div class="header-actions">
+            <button class="restore-btn hidden" id="restore-session-btn">
+              <i class="fas fa-undo"></i> <span>Restore Session</span>
+            </button>
+            <button class="theme-toggle-btn" id="theme-toggle-btn">
+              <i class="fas fa-palette"></i> <span>Theme</span>
+            </button>
+          </div>
         </div>
       </header>
 
@@ -256,7 +261,7 @@
                 <div class="form-group" style="flex: 1">
                   <label for="total-semesters">Total Semesters</label>
                   <div class="input-group">
-                    <input type="number" id="total-semesters" placeholder="e.g., 8" min="1" />
+                    <input type="number" id="total-semesters" placeholder="e.g., 8" min="1" value="3"/>
                     <button class="btn btn-primary" id="apply-semesters-btn">
                       <i class="fas fa-check"></i> Apply
                     </button>
