--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University Datesheet Generator</title>
+    <title>Exam Scheduling System</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
             </button>
             <div class="logo">
               <i class="fas fa-calendar-alt"></i>
-              <h1>Automatic Datesheet Generator</h1>
+              <h1>Exam Scheduling System</h1>
             </div>
           </div>
           <p class="subtitle">Tech & Innovative Society</p>
